Add form-widgets to html file

--- a/index.html
+++ b/index.html
@@ -18,7 +18,27 @@
         <section class="col-2 container">
             <h3>Col 2</h3>
             <div class="container-header"></div>
-            <form action=""></form>
+            <form action="">
+                <div class="form-control">
+                    <label for="email">Email address</label>
+                    <input type="email" name="email" id="email">
+                </div>
+                <div class="form-control">
+                    <label for="phone">Phone (recommended)</label>
+                    <input type="number" name="phone" id="phone">
+                </div>
+                <div class="form-control">
+                    <label for="pwd">Password</label>
+                    <input type="password" name="pwd" id="pwd">
+                </div>
+                <div class="form-control hide">
+                    <label for="pwd2">Confirm password</label>
+                    <input type="password" name="pwd2" id="pwd2">
+                </div>
+                <div>
+                    <button type="submit">Create Accounts</button>
+                </div>
+            </form>
             <div class="container-footer"></div>
         </section>
         <aside class="col-3">Col 3</aside>
