Fix linting error

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <div>One account for everything Intuit, including Mint</div>
                     <a href="#">Learn more</a>
                 </div>
-                <form action="">
+                <form action=".">
                     <div class="form-control">
                         <label for="email">Email address</label>
                         <input type="email" name="email" id="email">
