Add style to form-container header and form btn
- Change font-weight for form-container header
- Change color for form-container
- style form submit button

--- a/index.html
+++ b/index.html
@@ -61,8 +61,11 @@
                         <label for="pwd2">Confirm password</label>
                         <input type="password" name="pwd2" id="pwd2">
                     </div>
-                    <div>
-                        <button type="submit">Create Accounts</button>
+                    <div class="form-control">
+                        <button type="submit">
+                            <i class="material-icons icons" style="font-size: 14px;">lock</i>
+                            Create Accounts
+                        </button>
                     </div>
                 </form>
                 <div class="paragraph">
