--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </nav>
     </header>
     <main>
-        <aside class="col-1">Col 1</aside>
+        <aside class="col-1"></aside>
         <section class="container">
             <div class="container-header">
                 <h2 class="banner">InTUIT</h2>
@@ -73,10 +73,12 @@
                     <span><a href="#">Terms</a> and have read and acknowledge our <a href="#">Privacy</a></span>
                     <span><a href="#">Statement.</a></span>
                 </div>
-                <div class="form-container-footer"></div>
+            </div>
+            <div class="container-footer">
+                Invisible reCAPTCHA by Google <a href="#">Privacy Policy</a> and <a href="#">Terms of Use.</a>
             </div>
         </section>
-        <aside class="col-3">Col 3</aside>
+        <aside class="col-3"></aside>
     </main>
     
     <footer>
