--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
     </main>
     
     <footer>
+        <span><a href="#">Legal</a> <a href="#">Privacy</a> <a href="#">Security</a></span>
         <p>© 2020 Intuit, Inc. All rights reserved. Intuit, QuickBooks, QB, TurboTax, ProConnect and Mint are registered trademarks of Intuit Inc.</p>
         <p>Terms and conditions, features, support, pricing, and service options subject to change without notice.</p>
     </footer>
