--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+    <link rel="icon" href="./images/apple-touch-icon-57x57.png" type="image/png" sizes="16x16">
     <link rel="stylesheet" href="./index.css">
     <title>Intuit Accounts - Sign Up</title>
 </head>
@@ -28,14 +29,14 @@
         <aside class="col-1"></aside>
         <section class="container">
             <div class="container-header">
-                <h2 class="banner">InTUIT</h2>
-                <ul class="menu">
-                    <li>logo</li>
-                    <li>mint</li>
-                    <li>logo</li>
-                    <li>quickbooks</li>
-                    <li>logo</li>
-                    <li>turbotax</li>
+                <div class="banner"></div>
+                <ul class="menu-sprite">
+                    <li class="icon logo-1"></li>
+                    <li class="sprint mint"></li>
+                    <li class="icon logo-2"></li>
+                    <li class="sprint quickbook-logo"></li>
+                    <li class="icon logo-3"></li>
+                    <li class="sprint turbotax"></li>
                 </ul>
             </div>
             <div class="form-container">
