--- a/index.html
+++ b/index.html
@@ -87,5 +87,6 @@
         <p>© 2020 Intuit, Inc. All rights reserved. Intuit, QuickBooks, QB, TurboTax, ProConnect and Mint are registered trademarks of Intuit Inc.</p>
         <p>Terms and conditions, features, support, pricing, and service options subject to change without notice.</p>
     </footer>
+    <div class="privacy-settings-btn">Privacy Settings</div>
 </body>
 </html>
