Add info-text-label to the phone input form

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                     <div class="form-control">
                         <label for="phone">Phone (recommended)</label>
                         <input type="number" name="phone" id="phone">
+                        <div class="input-info-text">Standard call, messaging or data rates may apply.</div>
                     </div>
                     <div class="form-control">
                         <label for="pwd">Password</label>
