Fix review suggestion
- Refactor CSS Kept it dry
- Remove inline styles

--- a/index.html
+++ b/index.html
@@ -11,21 +11,22 @@
 </head>
 <body>
     <header>
-        <nav>
-            <div class="nav-right-column">
+        <nav class="flex">
+            <div class="flex">
                 <div class="description">
                     <div class="fade">Already have an Intuit account?</div>
                     <a href="#">I forgot my User ID or Password</a>
                 </div>
-                <button type="button">
-                    <i class="material-icons icons" style="font-size: 14px;">lock</i>
-                    Sign In
-                </button>
+                <div>
+                    <button type="button">
+                        <i class="material-icons icons">lock</i>
+                        Sign In
+                    </button>
+                </div>
             </div>
-            <div class="nav-left-column"></div>
         </nav>
     </header>
-    <main>
+    <main class="flex">
         <aside class="col-1"></aside>
         <section class="container">
             <div class="container-header">
@@ -39,7 +40,7 @@
                     <li class="sprint turbotax"></li>
                 </ul>
             </div>
-            <div class="form-container">
+            <div class="border form-container">
                 <div class="form-container-header">
                     <h2>Create an Intuit account</h2>
                     <div>One account for everything Intuit, including Mint</div>
@@ -70,7 +71,7 @@
                         </button>
                     </div>
                 </form>
-                <div class="paragraph">
+                <div class="paragraph fade">
                     <span>By clicking Create account, you agree to our</span>
                     <span><a href="#">Terms</a> and have read and acknowledge our <a href="#">Privacy</a></span>
                     <span><a href="#">Statement.</a></span>
